# TopicTrainerRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  use case.txt
.claude/: settings.local.json
data/: settings.json  topics_registry.json
data/documents/etl/: aws_glue_overview.txt
data/documents/vxworks/: vxworks_vxworks_basics.md
docs/: SETUP.md  TESTPLAN.md  presentation.html
docs/superpowers/plans/: 2026-03-28-techtrainer-ai.md  2026-03-29-knowledge-base-ui.md  2026-03-29-settings-provider.md  2026-04-07-ecs-dockerfile.md  2026-04-07-topic-classification.md  2026-04-09-wikipedia-zim-integration.md
docs/superpowers/specs/: 2026-03-28-techtrainer-ai-design.md  2026-03-29-knowledge-base-ui-design.md  2026-03-29-settings-provider-design.md  (+2 more)
scripts/: startup.bat
src/: config.py
src/agents/: content_author_agent.py  etl_agent.py  learning_path_agent.py  orchestrator.py  progress_agent.py  qa_agent.py  quiz_agent.py
src/hooks/: logging_throttle.py
src/models/: schemas.py
src/skills/: adf.md  aws_glue.md  dbt.md  informatica.md  playwright.md  selenium.md  spark.md  ssis.md  talend.md  tosca.md
src/tools/: chat_history.py  document_ingestion.py  embedding_manager.py  kb_manager.py  progress_db.py  provider_manager.py  retrieval.py  zim_reader.py
tests/: __init__.py  conftest.py  test_hooks.py  test_ingestion.py  test_kb_manager.py  test_progress_db.py  test_provider_manager.py  test_retrieval.py  test_retrieval_wikipedia.py  test_schemas.py  test_zim_config.py  test_zim_reader.py
(+10 files in other folders)
